@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 57*3;
+use Test::More tests => 58*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -31,6 +31,7 @@ my @tagsets =
     'eu::conll',
     'fa::conll',
     'fi::turku',
+    'fo::bjartensen',
     'grc::conll',
     'he::conll',
     'hi::conll',
